...
      'Bacterial leaf blight' => [
          'scanRecBlbEvacuateWater',
          'scanRecBlbApplyCopper',
          'scanRecBlbAvoidNitrogen',
          'scanRecBlbUseResistantVarieties',
        ],
      'Brown spot' => [
          'scanRecBrownSpotFertilize',
          'scanRecBrownSpotApplyFungicide',
          'scanRecBrownSpotDrainage',
          'scanRecBrownSpotAvoidStress',
        ],
      'Leaf smut' => [
...
